@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 04e05a7c1fd6177701c73a22384b499f4d59cf2c ChangeLog
+SHA1 6805ece4b5cdccdf8e6d3cfa152e14188f72450e ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 b963f4b9857db9218d7d859ef46f44cce8c988a1 META.yml
-SHA1 ca112f3d0617ec5a79c65cfec36c1ee1fedb54e2 MYMETA.json
-SHA1 f82ba94f31ef176be351cd7463f430aaa9ff065d MYMETA.yml
-SHA1 b68a97c4cd701f4d635ef79e3816adf3f524f426 Makefile.PL
+SHA1 338e9d9ecc4ead47156dd5f4cbe2253311c87621 META.yml
+SHA1 ce568c64cb4fd8ecde29b0492ced7489b2f0579d MYMETA.json
+SHA1 5171427bcb9426530b1541a510ef17afdeb1b7cf MYMETA.yml
+SHA1 0ed9db22eeee06a9cc34c170971e23ad2d4f1965 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 7b1e5fc66a955f36531f2319bb0471e3565ef407 lib/Net/FullAuto.pm
+SHA1 dbc93cd190ccd644d539a617f3489ce416c3932c lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEZbisACgkQJM3IZYB6aOqtfQCfTXGBdxF8Mw6ZBNBJB1AyxAlO
-yScAoJY+HW8OhsPikyq169VtInsSgYQh
-=A/Oh
+iEYEARECAAYFAlEaPtUACgkQJM3IZYB6aOp0UACeK3dlt2bpQcQgdWSJTpl44diX
+YmEAn0k2c72KFfuAxp/fgKnNtWs0O3cV
+=qBGA
 -----END PGP SIGNATURE-----
