@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999997';
+our $VERSION='0.999998';
 
 
 use 5.005;
