@@ -19,6 +19,13 @@
 ################################################################
 
 
+2013-02-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999998 released.
+
+        * Another Fix for installation of mozrepl in Makefile.PL.
+
+
 2013-02-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999997 released.
